[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taxon-weaver"
version = "0.1.0"
description = "Local-first taxonomy resolution engine for microbiome curation workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rafael" }]
keywords = ["taxonomy", "ncbi", "resolver", "microbiome", "sqlite"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "rapidfuzz>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "twine>=5",
]

[project.scripts]
taxon-weaver = "taxonomy_tools.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["taxonomy_resolver*", "taxonomy_tools*"]
